kustomize/overlays/openshift/replica_limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shypple
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: shypple
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
